script tags dont work like you'd expect

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -4,8 +4,8 @@
 								<meta charset="utf-8" />
 								<title>It works!</title>
 
-								<script src="gcal.js" />
-								<script src="https://apis.google.com/js/client.js?onload=checkAuth" />
+								<script src="gcal.js"> </script>
+								<script src="https://apis.google.com/js/client.js?onload=checkAuth"> </script>
 
 				</head>
 				<body>
