--- a/configsite/config.html
+++ b/configsite/config.html
@@ -4,10 +4,10 @@
 								<meta charset="utf-8" />
 								<title>It works!</title>
 
-								<link rel='stylesheet' type='text/css' href='slate.css'>
-								<script src="gcal.js"> </script>
+								<link rel='stylesheet' type='text/css' href='css/slate.css'>
+								<script src="js/gcal.js"> </script>
 								<script src="https://apis.google.com/js/client.js?onload=checkAuth"> </script>
-								<script src='slate.js'> </script>
+								<script src='js/slate.js'> </script>
 				</head>
 				<body>
 								<p> It works! Now to add stuff. </p>
