Good lord the title class is ugly

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -8,6 +8,18 @@
 								<script src="js/gcal.js"> </script>
 								<script src="https://apis.google.com/js/client.js?onload=checkAuth"> </script>
 								<script src='js/slate.js'> </script>
+								
+								<style>
+							  .title {
+							    padding: 15px 10px;
+							    text-transform: uppercase;
+							    font-family: 'PT Sans', sans-serif;
+							    font-size: 1.2em;
+							    font-weight: 500;
+							    color: #888888;
+							    text-align: center;
+							  }
+							  </style>
 				</head>
 				<body>
 					<h1 class='title'>FullCircle configuration</h1>
