--- a/configsite/config.html
+++ b/configsite/config.html
@@ -10,26 +10,19 @@
 		<!-- script src="https://apis.google.com/js/client.js?onload=checkAuth"> </script -->
 		
 		<script language="javascript">
-		function getQueryParam(param, defaultvalue) {
-		        // get the pairs of params fist
-		        var pairs = location.search.substring(1).split('&');
-		        var values = [];
-		        // now iterate each pair
-		        for (var i = 0; i < pairs.length; i++) {
-		            var params = pairs[i].split('=');
-		            if (params[0] == param) {
-		                // if the param doesn't have a value, like ?photos&videos, then return an empty srting
-		                //return params[1] || '';
-		                values.push(params[1]);
-		            }
-		        }
-		
-		        if (values.length > 0) {
-		            return values;
-		        } else {
-		            return defaultvalue;
-		        }
-		};
+		function getQueryParam(variable, defaultValue) {
+			// Find all URL parameters
+			var query = location.search.substring(1);
+			var vars = query.split('&');
+			for (var i = 0; i < vars.length; i++) {
+				var pair = vars[i].split('=');
+				// If the query variable parameter is found, decode it to use and return it for use
+				if (pair[0] === variable) {
+					return decodeURIComponent(pair[1]);
+				}
+			}
+			return defaultValue || false;
+		}
 		
 		function submit() {
 			var settings = {
