onload doesnt always work, trying document onload 2

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -53,7 +53,7 @@
 			document.getElementById("in-circle").value = config["color-circle"];
 			document.getElementById("in-back").value = config["color-background"];
 		}
-		document.addEventListener("load", currentValues);
+		document.body.addEventListener("load", currentValues);
 		</script>
 
 		<style>
