--- a/configsite/config.html
+++ b/configsite/config.html
@@ -105,23 +105,23 @@
 			<div class="item-container-content">
 			<label class="item">
 			Clock hour hand
-			<input type="text" class="item-color item-color-normal" name="color-hour" id="in-hour" value="#FFFFFF">
+			<input type="text" class="item-color item-color-sunny" name="color-hour" id="in-hour" value="#FFFFFF">
 			</label>
 			<label class="item">
 			Clock minute hand
-			<input type="text" class="item-color item-color-normal" name="color-min" id="in-min" value="#FFFFFF">
+			<input type="text" class="item-color item-color-sunny" name="color-min" id="in-min" value="#FFFFFF">
 			</label>
 			<label class="item">
 			Appointment circle
-			<input type="text" class="item-color item-color-normal" name="color-circle" id="in-circle" value="#000000">
+			<input type="text" class="item-color item-color-sunny" name="color-circle" id="in-circle" value="#000000">
 			</label>
 			<label class="item">
 			Appointments
-			<input type="text" class="item-color item-color-normal" name="color-appt" id="in-appt" value="#FFFFFF">
+			<input type="text" class="item-color item-color-sunny" name="color-appt" id="in-appt" value="#FFFFFF">
 			</label>
 			<label class="item">
 			Background
-			<input type="text" class="item-color item-color-normal" name="color-back" id="in-back" value="#000000">
+			<input type="text" class="item-color item-color-sunny" name="color-back" id="in-back" value="#000000">
 			</label>
 			</div>
 		</div>
