update color pickers 1/2
from a github issue on slate. sigh

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -53,6 +53,7 @@
 			document.getElementById("in-appt").value = config["color-appointment"].replace("0x","#");
 			document.getElementById("in-circle").value = config["color-circle"].replace("0x","#");
 			document.getElementById("in-back").value = config["color-background"].replace("0x","#");
+			$('.item-color').change();
 		}
 		</script>
 
