text about multi calendar

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -96,9 +96,10 @@
 				</label>
 			</div>
 			<div class='item-container-footer'>
-				The Google Calendar ID to read appointments from.
+				<p>The Google Calendar ID to read appointments from.
 				Usually your Gmail address.
-				Don't forget to make its free/busy information public.
+				Don't forget to make its free/busy information public.</p>
+				<p>You can add multiple calendars by separating the IDs by commas.</p>
 			</div>
 		</div>
 		
