--- a/configsite/config.html
+++ b/configsite/config.html
@@ -132,6 +132,10 @@
 			</label>
 			</div>
 		</div>
+		<div class='item-container-footer'>
+			<p>If your settings don't show, try <a href="javascript:currentValues()">clicking this</a>.</p>
+		</div>
+		</div>
 
 		<div class="item-container">
 			<div class="button-container">
