--- a/configsite/config.html
+++ b/configsite/config.html
@@ -132,6 +132,9 @@
 			</label>
 			</div>
 		</div>
+		<div class='item-container-footer'>
+			<p>If your configuration isn't showing, try <a href="" onclick="location.reload()">clicking here</a>.</p>
+		</div>
 		</div>
 
 		<div class="item-container">
