maybe its the values?

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -108,27 +108,27 @@
 			<div class="item-container-content">
 			<label class="item">
 			Clock hour hand
-			<input type="text" class="item-color item-color-sunny" name="color-hour" id="in-hour" value="#FFFFFF">
+			<input type="text" class="item-color item-color-sunny" name="color-hour" id="in-hour">
 			</label>
 			<label class="item">
 			Clock minute hand
-			<input type="text" class="item-color item-color-sunny" name="color-min" id="in-min" value="#FFFFFF">
+			<input type="text" class="item-color item-color-sunny" name="color-min" id="in-min">
 			</label>
 			<label class="item">
 			Appointment circle
-			<input type="text" class="item-color item-color-sunny" name="color-circle" id="in-circle" value="#000000">
+			<input type="text" class="item-color item-color-sunny" name="color-circle" id="in-circle">
 			</label>
 			<label class="item">
 			Appointments
-			<input type="text" class="item-color item-color-sunny" name="color-appt" id="in-appt" value="#FFFFFF">
+			<input type="text" class="item-color item-color-sunny" name="color-appt" id="in-appt">
 			</label>
 			<label class="item">
 			Background
-			<input type="text" class="item-color item-color-sunny" name="color-back" id="in-back" value="#000000">
+			<input type="text" class="item-color item-color-sunny" name="color-back" id="in-back">
 			</label>
 			<label class="item">
 			Date and weekday
-			<input type="text" class="item-color item-color-sunny" name="color-date" id="in-date" value="#FFFFFF">
+			<input type="text" class="item-color item-color-sunny" name="color-date" id="in-date">
 			</label>
 			</div>
 		</div>
