--- a/configsite/config.html
+++ b/configsite/config.html
@@ -108,32 +108,29 @@
 			<div class="item-container-content">
 			<label class="item">
 			Clock hour hand
-			<input type="text" class="item-color item-color-sunny" name="color-hour" id="in-hour">
+			<input type="text" class="item-color item-color-sunny" name="color-hour" id="in-hour" value="#0055AA">
 			</label>
 			<label class="item">
 			Clock minute hand
-			<input type="text" class="item-color item-color-sunny" name="color-min" id="in-min">
+			<input type="text" class="item-color item-color-sunny" name="color-min" id="in-min" value="#FFFFFF">
 			</label>
 			<label class="item">
 			Appointment circle
-			<input type="text" class="item-color item-color-sunny" name="color-circle" id="in-circle">
+			<input type="text" class="item-color item-color-sunny" name="color-circle" id="in-circle" value="#0055AA">
 			</label>
 			<label class="item">
 			Appointments
-			<input type="text" class="item-color item-color-sunny" name="color-appt" id="in-appt">
+			<input type="text" class="item-color item-color-sunny" name="color-appt" id="in-appt" value="#FFFFFF">
 			</label>
 			<label class="item">
 			Background
-			<input type="text" class="item-color item-color-sunny" name="color-back" id="in-back">
+			<input type="text" class="item-color item-color-sunny" name="color-back" id="in-back" value="#000000">
 			</label>
 			<label class="item">
 			Date and weekday
-			<input type="text" class="item-color item-color-sunny" name="color-date" id="in-date">
+			<input type="text" class="item-color item-color-sunny" name="color-date" id="in-date" value="#FFFFFF">
 			</label>
 			</div>
-		</div>
-		<div class='item-container-footer'>
-			<p>If your configuration isn't showing, try <a href="" onclick="location.reload()">clicking here</a>.</p>
 		</div>
 		</div>
 
