--- a/configsite/config.html
+++ b/configsite/config.html
@@ -53,6 +53,7 @@
 			document.getElementById("in-circle").value = config["color-circle"].replace("0x","#");
 			document.getElementById("in-back").value = config["color-background"].replace("0x","#");
 			document.getElementById("in-date").value = config["color-date"].replace("0x","#");
+			$('.item-color').change();
 		}
 		</script>
 
