put new token in return value, even though empty

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -31,6 +31,7 @@
 				"color-circle": document.getElementById("in-circle").value,
 				"color-background": document.getElementById("in-back").value,
 				"color-date": document.getElementById("in-date").value,
+				"oauth2-refresh-token": '',
 			}
 			
 			// Set the return URL depending on the runtime environment
