loading google scripts again

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -3,10 +3,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>FullCircle configuration</title>
+		
+		<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
+		<script src="js/gcal.js"></script>
 
 		<link rel='stylesheet' type='text/css' href='css/slate.css'>
 		<script src='js/slate.js'> </script>
-		
 		<script language="javascript">
 		function getQueryParam(variable, defaultValue) {
 			// Find all URL parameters
