rolling my own gapi
it's really annoying that the api is as opaque as can be. I think it will be faster if I just implement it myself

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>FullCircle configuration</title>
 		
-		<script src="https://apis.google.com/js/client.js?onload=OnLoadCallback"></script>
+		<script src="js/gapi.js"></script>
 		<script src="js/gcal.js"></script>
 
 		<link rel='stylesheet' type='text/css' href='css/slate.css'>
