Now also set the checkbox on load

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -58,6 +58,8 @@
 			document.getElementById("in-circle").value = config["color-circle"].replace("0x","#");
 			document.getElementById("in-back").value = config["color-background"].replace("0x","#");
 			document.getElementById("in-date").value = config["color-date"].replace("0x","#");
+			document.getElementById("in-piechart").value = 
+			  (document.getElementById("in-circle").value == document.getElementById("in-appt").value);
 		}
 		</script>
 
