Adding code to auto-update color pickers

--- a/configsite/config.html
+++ b/configsite/config.html
@@ -60,6 +60,7 @@
 			document.getElementById("in-date").value = config["color-date"].replace("0x","#");
 			document.getElementById("in-piechart").checked = 
 			  (document.getElementById("in-circle").value == document.getElementById("in-appt").value);
+			$('.item-color').change();
 		}
 		</script>
 
